Method you want to invoke is setScrobbleFlag